--- a/imagestyle.css
+++ b/imagestyle.css
@@ -9,5 +9,209 @@
 
 }
 body{
+    min-height: 100vh;
+
+ 
+      background: #e7f2fd;
+}
+/*
+html { 
+    background: url(assets/1343254.png) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    
+  }*/
+nav,
+.nav-links{
+    display: flex;
+
+}
+
+
+nav{
+    justify-content: space-around;
+    align-items: center;
+    height: 17vh;
+
+}
+
+.nav-links{
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+}
+a{
+    color: black;
+    text-decoration: none;
+    text-decoration-color: white;
+}
+
+a:hover{
+    color: rgb(243, 189, 41);
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+    text-decoration-color: rgb(233, 196, 30);
+}
+
+.logo{
+    font-size: 2rem;
+}
+.logo:hover{
+    cursor: default;
+}
+
+/*HAMBURGER MENU*/
+
+#hamburger-nav{
+    display: none;
+}
+
+.hamburger-menu{
+    position: relative;
+    display: inline-block;
+}
+
+.hamburger-icon{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 24px;
+    width: 30px;
+    cursor: pointer;
+
+}
+
+.hamburger-icon span{
+    width: 100%;
+    height: 2px;
+    background-color: black;
+    transition: all 0.3 ease-in-out ;
+}
+.menu-links{
+    position: absolute;
+    top: 10%;
+    right: 10px;
+    background-color: white;
+    width: fit-content;
+    max-height: 0;
+    overflow: hidden;
+    transition: all 0.3 ease-in-out ;
+}
+.menu-links a{
+    display: block;
+    padding: 10px;
+    text-align:center;
+    font-size: 1.5rem;
+    color: black;
+    text-decoration:none;
+    transition: all 0.3 ease-in-out ;
+}
+.menu-links li{
+    list-style: none;
+}
+
+.menu-links.open{
+    max-height: 300px;
+}
+.hamburger-icon.open span:first-child{
+  transform: rotate(45deg) translate(10px,5px);
+}
+.hamburger-icon.open span:nth-child(2){
+  opacity: 0;
+}
+.hamburger-icon.open span:last-child{
+  transform: rotate(-45deg) translate(10px,-5px);
+}
+.hamburger-icon span:first-child {
+    transform: none;
+}
+.hamburger-icon span:first-child {
+   opacity: 1;
+}
+.hamburger-icon span:first-child {
+    transform: none;
+}
+
+.container{
+    position: relative;
+    max-width: 1300px;
+    width: 100%;
+    margin: 50px auto;
+    padding: 20px;
+}
+
+.filter_buttons{
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+   
+}
+
+button{
+    padding: 10px 20px;
+    border-radius: 6px;
+    cursor: pointer;
+    font-size: 18px;
+    background: #fff;
+    border: none;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+}
+button.active{
+    background: #e7da26;
+    color: #fff;
+}
+
+.filterable_cards{
+    margin-top: 25px;
+    display: flex;
+
+    gap: 10px;
+    flex-wrap: wrap;
+}
+
+.card{
+    flex-basis: 300px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
     
 }
+
+.card.hide{
+    display: none ;
+}
+
+.card img{
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+    object-fit: cover;
+    height: 170px;
+}
+.card_body{
+    padding: 15px 20px 20px  ;
+}
+
+.card_title{
+    font-size: 15px;
+    font-weight: 500;
+    color: #333;
+}
+.card_text{
+    font-size: 12px;
+    color: #333;
+}
+/*FOOTER*/ 
+
+footer{
+    height: 26vh;
+    margin: 0 1rem;
+  
+  }
+  footer p{
+      text-align: center;
+  }
+
+ 
