--- a/imagestyle.css
+++ b/imagestyle.css
@@ -8,11 +8,34 @@
     box-sizing: border-box;
 
 }
+
+@font-face {
+    font-family: NeueMachina;
+    src: url("assets/NeueMachina-Regular.otf") format("opentype");
+}
+
+@font-face {
+    font-family: NeueMachina;
+    font-weight: bold;
+    src: url("assets/NeueMachina-Ultrabold.otf") format("opentype");
+}
+@font-face {
+    font-family: NeueMachina;
+    font-weight: lighter;
+    src: url("assets/NeueMachina-Light.otf") format("opentype");
+}
+
 body{
     min-height: 100vh;
 
  
-      background: #e7f2fd;
+      background: #000000;
+      overflow-x: hidden;
+    
+      font-family: ppobject;
+      color: #ffffff;
+      /* font-family: "Poppins", sans-serif; */
+      background-color: #000000;
 }
 /*
 html { 
@@ -23,19 +46,32 @@ html {
     background-size: cover;
     
   }*/
-nav,
-.nav-links{
-    display: flex;
 
+/* SCROLLBAR */
+::-webkit-scrollbar{
+    width: 1rem;
 }
 
+/* ::-webkit-scrollbar-track{
+    background-color: var(--black);
+    background: rgba(255, 0, 0, 0);
+} */
 
-nav{
-    justify-content: space-around;
-    align-items: center;
-    height: 17vh;
-
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: transparent;
 }
+::-webkit-scrollbar-thumb {
+    background-color: #8eff86;
+    border:1px solid  transparent;
+    border-top: 70px solid transparent;
+    background-clip: content-box;
+}
+::-webkit-scrollbar {
+    width: 6px;
+    background-color: transparent;
+}
+
 
 .nav-links{
     gap: 2rem;
@@ -62,15 +98,57 @@ a:hover{
     cursor: default;
 }
 
+
+/*DESKSTOP NAV*/
+
+nav,
+.nav-links{
+    display: flex;
+
+}
+
+nav{
+    justify-content: space-around;
+    align-items: center;
+    height: 17vh;
+
+}
+
+.nav-links{
+    gap: 2rem;
+    list-style: none;
+    font-size: 1.5rem;
+}
+a{
+    color: #8fff86;
+    text-decoration: none;
+    font-family: NeueMachina;
+}
+
+a:hover{
+    color: #ffffff;
+    text-decoration: underline;
+    text-underline-offset: 1rem;
+}
+
+.logo{
+    font-size: 2rem;
+}
+.logo:hover{
+    cursor: default;
+}
+
 /*HAMBURGER MENU*/
 
 #hamburger-nav{
     display: none;
+    z-index: 9999999;
 }
 
 .hamburger-menu{
     position: relative;
     display: inline-block;
+    z-index: 9999999;
 }
 
 .hamburger-icon{
@@ -80,33 +158,43 @@ a:hover{
     height: 24px;
     width: 30px;
     cursor: pointer;
+    filter: invert(40%);
+  
 
 }
 
 .hamburger-icon span{
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: rgb(255, 255, 255);
     transition: all 0.3 ease-in-out ;
+    z-index: 9999999;
 }
 .menu-links{
     position: absolute;
     top: 10%;
     right: 10px;
-    background-color: white;
+  
     width: fit-content;
     max-height: 0;
     overflow: hidden;
     transition: all 0.3 ease-in-out ;
+        /* background: linear-gradient(135deg, rgba(18, 255, 18, 0.1), rgba(255, 255, 255, 0)); */
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        z-index: 9999999;
 }
 .menu-links a{
     display: block;
-    padding: 5px;
+    padding: 10px;
     text-align:center;
-    font-size: 0.9rem;
-    color: black;
+    font-size: 1.5rem;
+    color: #8eff86;
+    border-bottom: 0.1px solid #8eff86;
     text-decoration:none;
     transition: all 0.3 ease-in-out ;
+    z-index: 9999999;
+
 }
 .menu-links li{
     list-style: none;
@@ -151,17 +239,28 @@ a:hover{
 }
 
 button{
-    padding: 10px 20px;
+    padding: 10px 12px;
     border-radius: 6px;
     cursor: pointer;
     font-size: 18px;
     background: #fff;
     border: none;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(135deg, #8fff86, rgba(73, 69, 69, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    /* border-radius: 20px; */
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
 }
+/* @media screen and (max-width:600px) {
+    button{
+        
+    }
+} */
 button.active{
-    background: #e7da26;
-    color: #fff;
+    background: #8fff86;
+       color: #1b1a1a;
 }
 
 .filterable_cards{
@@ -174,9 +273,15 @@ button.active{
 
 .card{
     flex-basis: 300px;
-    background-color: #fff;
-    border-radius: 8px;
+    background-color: #ffffff;
+    border-radius: 0px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+    background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    /* border-radius: 20px; */
+    border:1px solid rgba(255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     
 }
 
@@ -186,22 +291,23 @@ button.active{
 
 .card img{
     width: 100%;
-    border-radius: 8px 8px 0 0;
+    /* border-radius: 7px 7px 0 0; */
     object-fit: cover;
     height: 170px;
 }
 .card_body{
     padding: 15px 20px 20px  ;
+
 }
 
 .card_title{
     font-size: 15px;
     font-weight: 500;
-    color: #333;
+    color: #8fff86;
 }
 .card_text{
     font-size: 12px;
-    color: #333;
+    color: #fff;
 }
 /*FOOTER*/ 
 
@@ -214,4 +320,71 @@ footer{
       text-align: center;
   }
 
- 
+  .dots{
+    z-index: -99999;
+    position: absolute;
+    right: -20%;
+    top: -200px;
+    height: 800px;
+    width: 800px;
+    max-width:800px;
+    min-width:800px;
+    opacity: 80%;
+    background-image: radial-gradient(closest-side, rgba(255,230,0,0.21), #00000000);
+}
+
+.dots-2{
+    z-index: -99999;
+    position: absolute;
+   left: -20%;
+    top: 250px;
+    height: 800px;
+    width: 800px;
+    opacity: 80%;
+    background-image: radial-gradient(closest-side, rgba(255,230,0,0.21), #00000000);
+}
+.dots-3{
+    z-index: -99999;
+    position: absolute;
+    right: -20%;
+    top: 140vh;
+    height: 800px;
+    width: 800px;
+    max-width:800px;
+    min-width:800px;
+    opacity: 80%;
+    background-image: radial-gradient(closest-side, rgba(255,230,0,0.21), #00000000);
+}
+
+.dots-4{
+    z-index: -99999;
+    position: absolute;
+   left: -20%;
+    top: 250vh;
+    height: 800px;
+    width: 800px;
+    opacity: 80%;
+    background-image: radial-gradient(closest-side, rgba(255,230,0,0.21), #00000000);
+}
+.dots-5{
+    z-index: -99999;
+    position: absolute;
+   left: -20%;
+    top: 380vh;
+    height: 750px;
+    width: 750px;
+    opacity: 80%;
+    background-image: radial-gradient(closest-side, rgba(255,230,0,0.21), #00000000);
+}
+.dots-6{
+    z-index: -99999;
+    position: absolute;
+    right: -35%;
+    top: 370vh;
+    height: 700px;
+    width: 700px;
+    max-width:800px;
+    min-width:800px;
+    opacity: 80%;
+    background-image: radial-gradient(closest-side, rgba(255,230,0,0.21), #00000000);
+}
