--- a/style.css
+++ b/style.css
@@ -6,12 +6,14 @@
     padding: 0;
 }
 body{
-    overflow-x: hidden;
-    
     font-family: ppobject;
     color: #ffffff;
     /* font-family: "Poppins", sans-serif; */
     background-color: #000000;
+    
+}
+body{
+    overflow-x: hidden;
     
 }
 @font-face {
