--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -11,10 +11,13 @@
     } } 
     
 @media screen and (max-width:1200px) {
-    body {
+    body{
         max-width: 100%;
-        overflow-x: hidden;
       }
+    body{
+    overflow-x: hidden;
+    
+}
     #dekstop-nav{
         display: none;
     }
