--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -12,7 +12,7 @@
     
 @media screen and (max-width:1200px) {
     body{
-        max-width: 100vw;
+        max-width: 100%;
       }
     body{
     overflow-x: hidden;
